--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,6 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-
-# IntelliJ related
-*.iml
-*.ipr
-*.iws
-.idea/
-
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
-#.vscode/
-
-# Flutter/Dart/Pub related
+# ========================
+# === Flutter & Dart ===
+# ========================
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
@@ -33,13 +10,46 @@ migrate_working_dir/
 .pub/
 /build/
 
-# Symbolication related
+# Symbolication
 app.*.symbols
 
-# Obfuscation related
+# Obfuscation
 app.*.map.json
 
-# Android Studio will place build artifacts here
+# Android Studio
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# ========================
+# === Java / Spring Boot ===
+# ========================
+**/target/
+*.jar
+*.war
+*.ear
+
+# Gradle
+.gradle/
+build/
+
+# Maven
+.mvn/
+.settings/
+
+# Java
+*.class
+
+# ========================
+# === IDE & OS Specific ===
+# ========================
+*.iml
+*.ipr
+*.iws
+.idea/
+.vscode/       # ← nếu không muốn đẩy config VSCode
+*.log
+*.pyc
+*.swp
+.DS_Store
+Thumbs.db
