--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
 
+  mongo_dart: ^0.9.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
